--- a/base_runner_ionic/Dockerfile
+++ b/base_runner_ionic/Dockerfile
@@ -6,7 +6,7 @@ RUN curl --silent --location https://deb.nodesource.com/setup_4.x | sudo bash -
 RUN apt-get install -y nodejs
 RUN rm /usr/bin/node
 RUN ln -s "$(which nodejs)" /usr/bin/node
-RUN apt-get autoremove
+RUN apt-get autoremove -y
 RUN apt-get install -y lib32stdc++6 lib32z1
 
 # Install Cordova and Ionic
